--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 {% block header %}{% endblock %}
+{% if messages %}
+        	{% for message in messages %}
+          	<div class="alert alert-{{ message.tags }}">
+            	{{ message }}
+          	</div>
+        	{% endfor %}
+{% endif %}
 <main>
 	{% block content %}{% endblock %}
 </main>
