--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,12 +1,33 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
     <title>Title</title>
     {% block css %}{% endblock %}
 </head>
 <body>
-{% block header %}{% endblock %}
+<header class="site-header">
+    <nav class="navbar navbar-expand-md navbar-dark bg-blue">
+        <div class="container">
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Профиль</a>
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Новая запись</a>
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Выход</a>
+            {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Вход</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Регистрация</a>
+            {% endif %}
+        </div>
+    </nav>
+</header>
+
 {% if messages %}
         	{% for message in messages %}
           	<div class="alert alert-{{ message.tags }}">
@@ -14,7 +35,7 @@
           	</div>
         	{% endfor %}
 {% endif %}
-<main>
+<main role="main" class="container">
 	{% block content %}{% endblock %}
 </main>
 {% block js %}{% endblock %}
